# projekt-2-KiloAmper

./: CMakeLists.txt
src/: main.cpp
